# yredis.rs

./: .env.example  Cargo.toml  README.md
src/: api.rs  lib.rs  protocol.rs  server.rs  storage.rs  subscriber.rs  ws.rs
src/storage/: memory.rs  postgres.rs
tests/: test_server.rs
