[package]
name = "yredis"
version = "0.1.0"
edition = "2021"
authors = ["vidy.videni@gmail.com"]
license = "MIT"

[dependencies]
opendal = { version = "0.39.0", default-features = false, features = [
  "rustls",
  "services-s3",
], optional = true }
anyhow = "1.0.97"
async-trait = { version = "0.1.74" }
bytes = "1.10.1"
chrono = { version = "0.4" }
futures = "0.3.31"
futures-util = "0.3.31"
thiserror = "2.0.12"

tokio = { version = "1.33.0", default-features = false, features = [
  "rt-multi-thread",
  "time",
  "macros",
  "sync",
  "signal",
 ] }
tokio-tungstenite = "0.26.2"
redis = { version = "0.29.1", features = ["bytes"]}
dotenvy = "0.15.7"
regex = "1.10.2"
urlencoding = "2.1.3"
yrs = { version = "0.22.0", features= ["sync"] }
uuid = { version = "1.16.0", features = ["v4"] }
tracing = { version = "0.1.40" }
rand = "0.9.0"
sea-orm = { version = "1.1.7", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }
jsonwebtoken = "9.3.1"
serde_json = "1.0.140"
axum = { version="0.8.1", features = ['ws'] }

[[bin]]
name = "server"
path = "src/bin/server.rs"
required-features = []

[[bin]]
name = "worker"
path = "src/bin/worker.rs"
required-features = []
